// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiInMemoryTable behavior pagination 1`] = `
<EuiInMemoryTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
      Object {
        "id": "4",
        "name": "name4",
      },
    ]
  }
  pagination={
    Object {
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
    }
  }
  responsive={true}
  tableLayout="fixed"
>
  <EuiBasicTable
    aria-label="aria-label"
    className="testClass1 testClass2"
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
        },
      ]
    }
    data-test-subj="test subject string"
    items={
      Array [
        Object {
          "id": "3",
          "name": "name3",
        },
        Object {
          "id": "4",
          "name": "name4",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    pagination={
      Object {
        "hidePerPageOptions": undefined,
        "pageIndex": 1,
        "pageSize": 2,
        "pageSizeOptions": Array [
          2,
          4,
          6,
        ],
        "totalItemCount": 4,
      }
    }
    responsive={true}
    tableLayout="fixed"
  >
    <div
      aria-label="aria-label"
      className="euiBasicTable testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div>
        <EuiTableHeaderMobile>
          <div
            className="euiTableHeaderMobile"
          >
            <EuiFlexGroup
              alignItems="baseline"
              justifyContent="spaceBetween"
              responsive={false}
            >
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  />
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  />
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </div>
        </EuiTableHeaderMobile>
        <EuiTable
          id="__table_generated-id"
          responsive={true}
          tableLayout="fixed"
        >
          <table
            className="euiTable euiTable--responsive"
            id="__table_generated-id"
            tabIndex={-1}
          >
            <EuiScreenReaderOnly>
              <caption
                className="euiScreenReaderOnly euiTableCaption"
              >
                <EuiDelayRender
                  delay={500}
                />
              </caption>
            </EuiScreenReaderOnly>
            <EuiTableHeader>
              <thead>
                <tr>
                  <EuiTableHeaderCell
                    align="left"
                    data-test-subj="tableHeaderCell_name_0"
                    key="_data_h_name_0"
                  >
                    <th
                      className="euiTableHeaderCell"
                      data-test-subj="tableHeaderCell_name_0"
                      role="columnheader"
                      scope="col"
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    >
                      <div
                        className="euiTableCellContent"
                      >
                        <EuiInnerText>
                          <span
                            className="euiTableCellContent__text"
                            title="Name"
                          >
                            Name
                          </span>
                        </EuiInnerText>
                      </div>
                    </th>
                  </EuiTableHeaderCell>
                </tr>
              </thead>
            </EuiTableHeader>
            <EuiTableBody
              bodyRef={[Function]}
            >
              <tbody>
                <EuiTableRow
                  isSelected={false}
                >
                  <tr
                    className="euiTableRow"
                  >
                    <EuiTableRowCell
                      align="left"
                      key="_data_column_name_2_0"
                      mobileOptions={
                        Object {
                          "header": "Name",
                          "render": undefined,
                        }
                      }
                      setScopeRow={false}
                      textOnly={true}
                    >
                      <td
                        className="euiTableRowCell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                        >
                          Name
                        </div>
                        <div
                          className="euiTableCellContent"
                        >
                          <span
                            className="euiTableCellContent__text"
                          >
                            name3
                          </span>
                        </div>
                      </td>
                    </EuiTableRowCell>
                  </tr>
                </EuiTableRow>
                <EuiTableRow
                  isSelected={false}
                >
                  <tr
                    className="euiTableRow"
                  >
                    <EuiTableRowCell
                      align="left"
                      key="_data_column_name_3_0"
                      mobileOptions={
                        Object {
                          "header": "Name",
                          "render": undefined,
                        }
                      }
                      setScopeRow={false}
                      textOnly={true}
                    >
                      <td
                        className="euiTableRowCell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                        >
                          Name
                        </div>
                        <div
                          className="euiTableCellContent"
                        >
                          <span
                            className="euiTableCellContent__text"
                          >
                            name4
                          </span>
                        </div>
                      </td>
                    </EuiTableRowCell>
                  </tr>
                </EuiTableRow>
              </tbody>
            </EuiTableBody>
          </table>
        </EuiTable>
      </div>
      <PaginationBar
        aria-controls="__table_generated-id"
        onPageChange={[Function]}
        onPageSizeChange={[Function]}
        pagination={
          Object {
            "hidePerPageOptions": undefined,
            "pageIndex": 1,
            "pageSize": 2,
            "pageSizeOptions": Array [
              2,
              4,
              6,
            ],
            "totalItemCount": 4,
          }
        }
      >
        <div>
          <EuiSpacer
            size="m"
          >
            <div
              className="euiSpacer euiSpacer--m"
            />
          </EuiSpacer>
          <EuiTablePagination
            activePage={1}
            aria-controls="__table_generated-id"
            itemsPerPage={2}
            itemsPerPageOptions={
              Array [
                2,
                4,
                6,
              ]
            }
            onChangeItemsPerPage={[Function]}
            onChangePage={[Function]}
            pageCount={2}
          >
            <EuiFlexGroup
              alignItems="center"
              justifyContent="spaceBetween"
              responsive={false}
            >
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <EuiPopover
                      anchorPosition="upRight"
                      button={
                        <EuiButtonEmpty
                          color="text"
                          data-test-subj="tablePaginationPopoverButton"
                          iconSide="right"
                          iconType="arrowDown"
                          onClick={[Function]}
                          size="xs"
                        >
                          <EuiI18n
                            default="Rows per page"
                            token="euiTablePagination.rowsPerPage"
                          />
                          : 
                          2
                        </EuiButtonEmpty>
                      }
                      closePopover={[Function]}
                      display="inlineBlock"
                      hasArrow={true}
                      isOpen={false}
                      ownFocus={true}
                      panelPaddingSize="none"
                    >
                      <div
                        className="euiPopover euiPopover--anchorUpRight"
                      >
                        <div
                          className="euiPopover__anchor"
                        >
                          <EuiButtonEmpty
                            color="text"
                            data-test-subj="tablePaginationPopoverButton"
                            iconSide="right"
                            iconType="arrowDown"
                            onClick={[Function]}
                            size="xs"
                          >
                            <button
                              className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall"
                              data-test-subj="tablePaginationPopoverButton"
                              disabled={false}
                              onClick={[Function]}
                              type="button"
                            >
                              <EuiButtonContent
                                className="euiButtonEmpty__content"
                                iconSide="right"
                                iconType="arrowDown"
                                textProps={
                                  Object {
                                    "className": "euiButtonEmpty__text",
                                  }
                                }
                              >
                                <span
                                  className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                                >
                                  <EuiIcon
                                    className="euiButtonContent__icon"
                                    size="m"
                                    type="arrowDown"
                                  >
                                    <span
                                      className="euiButtonContent__icon"
                                      data-euiicon-type="arrowDown"
                                      size="m"
                                    />
                                  </EuiIcon>
                                  <span
                                    className="euiButtonEmpty__text"
                                  >
                                    <EuiI18n
                                      default="Rows per page"
                                      token="euiTablePagination.rowsPerPage"
                                    >
                                      Rows per page
                                    </EuiI18n>
                                    : 
                                    2
                                  </span>
                                </span>
                              </EuiButtonContent>
                            </button>
                          </EuiButtonEmpty>
                        </div>
                      </div>
                    </EuiPopover>
                  </div>
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <EuiPagination
                      activePage={1}
                      aria-controls="__table_generated-id"
                      onPageClick={[Function]}
                      pageCount={2}
                    >
                      <nav
                        className="euiPagination"
                      >
                        <EuiI18n
                          default="Previous page, {page}"
                          token="euiPagination.previousPage"
                          values={
                            Object {
                              "page": 1,
                            }
                          }
                        >
                          <EuiI18n
                            default="Previous page"
                            token="euiPagination.disabledPreviousPage"
                          >
                            <EuiButtonIcon
                              aria-controls="__table_generated-id"
                              aria-label="Previous page, 1"
                              color="text"
                              data-test-subj="pagination-button-previous"
                              href="#__table_generated-id"
                              iconType="arrowLeft"
                              onClick={[Function]}
                            >
                              <a
                                aria-controls="__table_generated-id"
                                aria-label="Previous page, 1"
                                className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                                data-test-subj="pagination-button-previous"
                                href="#__table_generated-id"
                                onClick={[Function]}
                                rel="noreferrer"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiButtonIcon__icon"
                                  size="m"
                                  type="arrowLeft"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiButtonIcon__icon"
                                    data-euiicon-type="arrowLeft"
                                    size="m"
                                  />
                                </EuiIcon>
                              </a>
                            </EuiButtonIcon>
                          </EuiI18n>
                        </EuiI18n>
                        <ul
                          className="euiPagination__list"
                        >
                          <PaginationButton
                            key="0"
                            pageIndex={0}
                          >
                            <li
                              className="euiPagination__item"
                            >
                              <EuiPaginationButton
                                aria-controls="__table_generated-id"
                                hideOnMobile={true}
                                isActive={false}
                                onClick={[Function]}
                                pageIndex={0}
                                totalPages={2}
                              >
                                <EuiI18n
                                  default="Page {page} of {totalPages}"
                                  token="euiPaginationButton.longPageString"
                                  values={
                                    Object {
                                      "page": 1,
                                      "totalPages": 2,
                                    }
                                  }
                                >
                                  <EuiI18n
                                    default="Page {page}"
                                    token="euiPaginationButton.shortPageString"
                                    values={
                                      Object {
                                        "page": 1,
                                      }
                                    }
                                  >
                                    <EuiButtonEmpty
                                      aria-controls="__table_generated-id"
                                      aria-label="Page 1 of 2"
                                      className="euiPaginationButton euiPaginationButton--hideOnMobile"
                                      color="text"
                                      data-test-subj="pagination-button-0"
                                      href="#__table_generated-id"
                                      isDisabled={false}
                                      onClick={[Function]}
                                      size="s"
                                    >
                                      <a
                                        aria-controls="__table_generated-id"
                                        aria-label="Page 1 of 2"
                                        className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiPaginationButton euiPaginationButton--hideOnMobile"
                                        data-test-subj="pagination-button-0"
                                        href="#__table_generated-id"
                                        onClick={[Function]}
                                        rel="noreferrer"
                                      >
                                        <EuiButtonContent
                                          className="euiButtonEmpty__content"
                                          iconSide="left"
                                          textProps={
                                            Object {
                                              "className": "euiButtonEmpty__text",
                                            }
                                          }
                                        >
                                          <span
                                            className="euiButtonContent euiButtonEmpty__content"
                                          >
                                            <span
                                              className="euiButtonEmpty__text"
                                            >
                                              1
                                            </span>
                                          </span>
                                        </EuiButtonContent>
                                      </a>
                                    </EuiButtonEmpty>
                                  </EuiI18n>
                                </EuiI18n>
                              </EuiPaginationButton>
                            </li>
                          </PaginationButton>
                          <PaginationButton
                            key="1"
                            pageIndex={1}
                          >
                            <li
                              className="euiPagination__item"
                            >
                              <EuiPaginationButton
                                aria-controls="__table_generated-id"
                                hideOnMobile={true}
                                isActive={true}
                                onClick={[Function]}
                                pageIndex={1}
                                totalPages={2}
                              >
                                <EuiI18n
                                  default="Page {page} of {totalPages}"
                                  token="euiPaginationButton.longPageString"
                                  values={
                                    Object {
                                      "page": 2,
                                      "totalPages": 2,
                                    }
                                  }
                                >
                                  <EuiI18n
                                    default="Page {page}"
                                    token="euiPaginationButton.shortPageString"
                                    values={
                                      Object {
                                        "page": 2,
                                      }
                                    }
                                  >
                                    <EuiButtonEmpty
                                      aria-controls="__table_generated-id"
                                      aria-current={true}
                                      aria-label="Page 2 of 2"
                                      className="euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                                      color="text"
                                      data-test-subj="pagination-button-1"
                                      href="#__table_generated-id"
                                      isDisabled={true}
                                      onClick={[Function]}
                                      size="s"
                                    >
                                      <button
                                        aria-controls="__table_generated-id"
                                        aria-current={true}
                                        aria-label="Page 2 of 2"
                                        className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--small euiButtonEmpty-isDisabled euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                                        data-test-subj="pagination-button-1"
                                        disabled={true}
                                        onClick={[Function]}
                                        type="button"
                                      >
                                        <EuiButtonContent
                                          className="euiButtonEmpty__content"
                                          iconSide="left"
                                          textProps={
                                            Object {
                                              "className": "euiButtonEmpty__text",
                                            }
                                          }
                                        >
                                          <span
                                            className="euiButtonContent euiButtonEmpty__content"
                                          >
                                            <span
                                              className="euiButtonEmpty__text"
                                            >
                                              2
                                            </span>
                                          </span>
                                        </EuiButtonContent>
                                      </button>
                                    </EuiButtonEmpty>
                                  </EuiI18n>
                                </EuiI18n>
                              </EuiPaginationButton>
                            </li>
                          </PaginationButton>
                        </ul>
                        <EuiI18n
                          default="Next page, {page}"
                          token="euiPagination.nextPage"
                          values={
                            Object {
                              "page": 3,
                            }
                          }
                        >
                          <EuiI18n
                            default="Next page"
                            token="euiPagination.disabledNextPage"
                          >
                            <EuiButtonIcon
                              aria-label="Next page"
                              color="text"
                              data-test-subj="pagination-button-next"
                              disabled={true}
                              iconType="arrowRight"
                              onClick={[Function]}
                            >
                              <button
                                aria-label="Next page"
                                className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall"
                                data-test-subj="pagination-button-next"
                                disabled={true}
                                onClick={[Function]}
                                type="button"
                              >
                                <EuiIcon
                                  aria-hidden="true"
                                  className="euiButtonIcon__icon"
                                  size="m"
                                  type="arrowRight"
                                >
                                  <span
                                    aria-hidden="true"
                                    className="euiButtonIcon__icon"
                                    data-euiicon-type="arrowRight"
                                    size="m"
                                  />
                                </EuiIcon>
                              </button>
                            </EuiButtonIcon>
                          </EuiI18n>
                        </EuiI18n>
                      </nav>
                    </EuiPagination>
                  </div>
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </EuiTablePagination>
        </div>
      </PaginationBar>
    </div>
  </EuiBasicTable>
</EuiInMemoryTable>
`;

exports[`EuiInMemoryTable empty array 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with executeQueryOptions 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with initial selection 1`] = `
<EuiInMemoryTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  responsive={true}
  selection={
    Object {
      "initialSelected": Array [
        Object {
          "id": "1",
          "name": "name1",
        },
      ],
      "onSelectionChange": [Function],
    }
  }
  tableLayout="fixed"
>
  <EuiBasicTable
    aria-label="aria-label"
    className="testClass1 testClass2"
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
        },
      ]
    }
    data-test-subj="test subject string"
    itemId="id"
    items={
      Array [
        Object {
          "id": "1",
          "name": "name1",
        },
        Object {
          "id": "2",
          "name": "name2",
        },
        Object {
          "id": "3",
          "name": "name3",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    responsive={true}
    selection={
      Object {
        "initialSelected": Array [
          Object {
            "id": "1",
            "name": "name1",
          },
        ],
        "onSelectionChange": [Function],
      }
    }
    tableLayout="fixed"
  >
    <div
      aria-label="aria-label"
      className="euiBasicTable testClass1 testClass2"
      data-test-subj="test subject string"
    >
      <div>
        <EuiTableHeaderMobile>
          <div
            className="euiTableHeaderMobile"
          >
            <EuiFlexGroup
              alignItems="baseline"
              justifyContent="spaceBetween"
              responsive={false}
            >
              <div
                className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
              >
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  >
                    <EuiI18n
                      default="Select all rows"
                      token="euiBasicTable.selectAllRows"
                    >
                      <EuiCheckbox
                        aria-label="Select all rows"
                        checked={false}
                        compressed={false}
                        disabled={false}
                        id="_selection_column-checkbox_generated-id"
                        indeterminate={false}
                        label="Select all rows"
                        onChange={[Function]}
                      >
                        <div
                          className="euiCheckbox"
                        >
                          <input
                            aria-label="Select all rows"
                            checked={false}
                            className="euiCheckbox__input"
                            disabled={false}
                            id="_selection_column-checkbox_generated-id"
                            onChange={[Function]}
                            type="checkbox"
                          />
                          <div
                            className="euiCheckbox__square"
                          />
                          <label
                            className="euiCheckbox__label"
                            htmlFor="_selection_column-checkbox_generated-id"
                          >
                            Select all rows
                          </label>
                        </div>
                      </EuiCheckbox>
                    </EuiI18n>
                  </div>
                </EuiFlexItem>
                <EuiFlexItem
                  grow={false}
                >
                  <div
                    className="euiFlexItem euiFlexItem--flexGrowZero"
                  />
                </EuiFlexItem>
              </div>
            </EuiFlexGroup>
          </div>
        </EuiTableHeaderMobile>
        <EuiTable
          id="__table_generated-id"
          responsive={true}
          tableLayout="fixed"
        >
          <table
            className="euiTable euiTable--responsive"
            id="__table_generated-id"
            tabIndex={-1}
          >
            <EuiScreenReaderOnly>
              <caption
                className="euiScreenReaderOnly euiTableCaption"
              >
                <EuiDelayRender
                  delay={500}
                />
              </caption>
            </EuiScreenReaderOnly>
            <EuiTableHeader>
              <thead>
                <tr>
                  <EuiTableHeaderCellCheckbox
                    key="_selection_column_h"
                  >
                    <th
                      className="euiTableHeaderCellCheckbox"
                      scope="col"
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    >
                      <div
                        className="euiTableCellContent"
                      >
                        <EuiI18n
                          default="Select all rows"
                          token="euiBasicTable.selectAllRows"
                        >
                          <EuiCheckbox
                            aria-label="Select all rows"
                            checked={false}
                            compressed={false}
                            data-test-subj="checkboxSelectAll"
                            disabled={false}
                            id="_selection_column-checkbox_generated-id"
                            indeterminate={false}
                            label={null}
                            onChange={[Function]}
                            type="inList"
                          >
                            <div
                              className="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                            >
                              <input
                                aria-label="Select all rows"
                                checked={false}
                                className="euiCheckbox__input"
                                data-test-subj="checkboxSelectAll"
                                disabled={false}
                                id="_selection_column-checkbox_generated-id"
                                onChange={[Function]}
                                type="checkbox"
                              />
                              <div
                                className="euiCheckbox__square"
                              />
                            </div>
                          </EuiCheckbox>
                        </EuiI18n>
                      </div>
                    </th>
                  </EuiTableHeaderCellCheckbox>
                  <EuiTableHeaderCell
                    align="left"
                    data-test-subj="tableHeaderCell_name_0"
                    key="_data_h_name_0"
                  >
                    <th
                      className="euiTableHeaderCell"
                      data-test-subj="tableHeaderCell_name_0"
                      role="columnheader"
                      scope="col"
                      style={
                        Object {
                          "width": undefined,
                        }
                      }
                    >
                      <div
                        className="euiTableCellContent"
                      >
                        <EuiInnerText>
                          <span
                            className="euiTableCellContent__text"
                            title="Name"
                          >
                            Name
                          </span>
                        </EuiInnerText>
                      </div>
                    </th>
                  </EuiTableHeaderCell>
                </tr>
              </thead>
            </EuiTableHeader>
            <EuiTableBody
              bodyRef={[Function]}
            >
              <tbody>
                <EuiTableRow
                  isSelectable={true}
                  isSelected={true}
                >
                  <tr
                    className="euiTableRow euiTableRow-isSelectable euiTableRow-isSelected"
                  >
                    <EuiTableRowCellCheckbox
                      key="_selection_column_1"
                    >
                      <td
                        className="euiTableRowCellCheckbox"
                      >
                        <div
                          className="euiTableCellContent"
                        >
                          <EuiI18n
                            default="Select this row"
                            token="euiBasicTable.selectThisRow"
                          >
                            <EuiCheckbox
                              aria-label="Select this row"
                              checked={true}
                              compressed={false}
                              data-test-subj="checkboxSelectRow-1"
                              disabled={false}
                              id="_selection_column_1-checkbox"
                              indeterminate={false}
                              onChange={[Function]}
                              title="Select this row"
                              type="inList"
                            >
                              <div
                                className="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                              >
                                <input
                                  aria-label="Select this row"
                                  checked={true}
                                  className="euiCheckbox__input"
                                  data-test-subj="checkboxSelectRow-1"
                                  disabled={false}
                                  id="_selection_column_1-checkbox"
                                  onChange={[Function]}
                                  title="Select this row"
                                  type="checkbox"
                                />
                                <div
                                  className="euiCheckbox__square"
                                />
                              </div>
                            </EuiCheckbox>
                          </EuiI18n>
                        </div>
                      </td>
                    </EuiTableRowCellCheckbox>
                    <EuiTableRowCell
                      align="left"
                      key="_data_column_name_1_0"
                      mobileOptions={
                        Object {
                          "header": "Name",
                          "render": undefined,
                        }
                      }
                      setScopeRow={false}
                      textOnly={true}
                    >
                      <td
                        className="euiTableRowCell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                        >
                          Name
                        </div>
                        <div
                          className="euiTableCellContent"
                        >
                          <span
                            className="euiTableCellContent__text"
                          >
                            name1
                          </span>
                        </div>
                      </td>
                    </EuiTableRowCell>
                  </tr>
                </EuiTableRow>
                <EuiTableRow
                  isSelectable={true}
                  isSelected={false}
                >
                  <tr
                    className="euiTableRow euiTableRow-isSelectable"
                  >
                    <EuiTableRowCellCheckbox
                      key="_selection_column_2"
                    >
                      <td
                        className="euiTableRowCellCheckbox"
                      >
                        <div
                          className="euiTableCellContent"
                        >
                          <EuiI18n
                            default="Select this row"
                            token="euiBasicTable.selectThisRow"
                          >
                            <EuiCheckbox
                              aria-label="Select this row"
                              checked={false}
                              compressed={false}
                              data-test-subj="checkboxSelectRow-2"
                              disabled={false}
                              id="_selection_column_2-checkbox"
                              indeterminate={false}
                              onChange={[Function]}
                              title="Select this row"
                              type="inList"
                            >
                              <div
                                className="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                              >
                                <input
                                  aria-label="Select this row"
                                  checked={false}
                                  className="euiCheckbox__input"
                                  data-test-subj="checkboxSelectRow-2"
                                  disabled={false}
                                  id="_selection_column_2-checkbox"
                                  onChange={[Function]}
                                  title="Select this row"
                                  type="checkbox"
                                />
                                <div
                                  className="euiCheckbox__square"
                                />
                              </div>
                            </EuiCheckbox>
                          </EuiI18n>
                        </div>
                      </td>
                    </EuiTableRowCellCheckbox>
                    <EuiTableRowCell
                      align="left"
                      key="_data_column_name_2_0"
                      mobileOptions={
                        Object {
                          "header": "Name",
                          "render": undefined,
                        }
                      }
                      setScopeRow={false}
                      textOnly={true}
                    >
                      <td
                        className="euiTableRowCell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                        >
                          Name
                        </div>
                        <div
                          className="euiTableCellContent"
                        >
                          <span
                            className="euiTableCellContent__text"
                          >
                            name2
                          </span>
                        </div>
                      </td>
                    </EuiTableRowCell>
                  </tr>
                </EuiTableRow>
                <EuiTableRow
                  isSelectable={true}
                  isSelected={false}
                >
                  <tr
                    className="euiTableRow euiTableRow-isSelectable"
                  >
                    <EuiTableRowCellCheckbox
                      key="_selection_column_3"
                    >
                      <td
                        className="euiTableRowCellCheckbox"
                      >
                        <div
                          className="euiTableCellContent"
                        >
                          <EuiI18n
                            default="Select this row"
                            token="euiBasicTable.selectThisRow"
                          >
                            <EuiCheckbox
                              aria-label="Select this row"
                              checked={false}
                              compressed={false}
                              data-test-subj="checkboxSelectRow-3"
                              disabled={false}
                              id="_selection_column_3-checkbox"
                              indeterminate={false}
                              onChange={[Function]}
                              title="Select this row"
                              type="inList"
                            >
                              <div
                                className="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
                              >
                                <input
                                  aria-label="Select this row"
                                  checked={false}
                                  className="euiCheckbox__input"
                                  data-test-subj="checkboxSelectRow-3"
                                  disabled={false}
                                  id="_selection_column_3-checkbox"
                                  onChange={[Function]}
                                  title="Select this row"
                                  type="checkbox"
                                />
                                <div
                                  className="euiCheckbox__square"
                                />
                              </div>
                            </EuiCheckbox>
                          </EuiI18n>
                        </div>
                      </td>
                    </EuiTableRowCellCheckbox>
                    <EuiTableRowCell
                      align="left"
                      key="_data_column_name_3_0"
                      mobileOptions={
                        Object {
                          "header": "Name",
                          "render": undefined,
                        }
                      }
                      setScopeRow={false}
                      textOnly={true}
                    >
                      <td
                        className="euiTableRowCell"
                        style={
                          Object {
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
                        >
                          Name
                        </div>
                        <div
                          className="euiTableCellContent"
                        >
                          <span
                            className="euiTableCellContent__text"
                          >
                            name3
                          </span>
                        </div>
                      </td>
                    </EuiTableRowCell>
                  </tr>
                </EuiTableRow>
              </tbody>
            </EuiTableBody>
          </table>
        </EuiTable>
      </div>
    </div>
  </EuiBasicTable>
</EuiInMemoryTable>
`;

exports[`EuiInMemoryTable with initial sorting 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "3",
        "name": "name3",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "1",
        "name": "name1",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": Object {
        "direction": "desc",
        "field": "Name",
      },
    }
  }
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with items 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with items and expanded item 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  itemIdToExpandedRowMap={
    Object {
      "1": <div>
        expanded row content
      </div>,
    }
  }
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with items and message - expecting to show the items 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="show me!"
  onChange={[Function]}
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with message 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  noItemsMessage="where my items at?"
  onChange={[Function]}
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with message and loading 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={Array []}
  loading={true}
  noItemsMessage="Loading items...."
  onChange={[Function]}
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination and default page size and index 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 1,
      "pageSize": 2,
      "pageSizeOptions": Array [
        1,
        2,
        3,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination and selection 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "onSelectionChange": [Function],
    }
  }
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination, default page size and error 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  error="ouch!"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 4,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 1,
    }
  }
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination, hiding the per page options 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
      },
    ]
  }
  data-test-subj="test subject string"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": true,
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination, selection and sorting 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "onSelectionChange": [Function],
    }
  }
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": undefined,
    }
  }
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting  and simple search 1`] = `
<div>
  <EuiSearchBar
    onChange={[Function]}
  />
  <EuiSpacer
    size="l"
  />
  <EuiBasicTable
    aria-label="aria-label"
    className="testClass1 testClass2"
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
          "sortable": true,
        },
        Object {
          "actions": Array [
            Object {
              "description": "edit",
              "name": "Edit",
              "onClick": [Function],
            },
          ],
          "name": "Actions",
        },
      ]
    }
    data-test-subj="test subject string"
    itemId="id"
    items={
      Array [
        Object {
          "id": "1",
          "name": "name1",
        },
        Object {
          "id": "2",
          "name": "name2",
        },
        Object {
          "id": "3",
          "name": "name3",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    pagination={
      Object {
        "hidePerPageOptions": undefined,
        "pageIndex": 0,
        "pageSize": 10,
        "pageSizeOptions": Array [
          10,
          25,
          50,
        ],
        "totalItemCount": 3,
      }
    }
    responsive={true}
    selection={
      Object {
        "onSelectionChange": [Function],
      }
    }
    sorting={
      Object {
        "allowNeutralSort": true,
        "sort": undefined,
      }
    }
    tableLayout="fixed"
  />
</div>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and a single record action 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "sortable": true,
      },
      Object {
        "actions": Array [
          Object {
            "description": "edit",
            "name": "Edit",
            "onClick": [Function],
          },
        ],
        "name": "Actions",
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
      Object {
        "id": "3",
        "name": "name3",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 10,
      "pageSizeOptions": Array [
        10,
        25,
        50,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "onSelectionChange": [Function],
    }
  }
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": undefined,
    }
  }
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and column renderer 1`] = `
<EuiBasicTable
  aria-label="aria-label"
  className="testClass1 testClass2"
  columns={
    Array [
      Object {
        "description": "description",
        "field": "name",
        "name": "Name",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  data-test-subj="test subject string"
  itemId="id"
  items={
    Array [
      Object {
        "id": "1",
        "name": "name1",
      },
      Object {
        "id": "2",
        "name": "name2",
      },
    ]
  }
  noItemsMessage="No items found"
  onChange={[Function]}
  pagination={
    Object {
      "hidePerPageOptions": undefined,
      "pageIndex": 0,
      "pageSize": 2,
      "pageSizeOptions": Array [
        2,
        4,
        6,
      ],
      "totalItemCount": 3,
    }
  }
  responsive={true}
  selection={
    Object {
      "onSelectionChange": [Function],
    }
  }
  sorting={
    Object {
      "allowNeutralSort": true,
      "sort": undefined,
    }
  }
  tableLayout="fixed"
/>
`;

exports[`EuiInMemoryTable with pagination, selection, sorting and configured search 1`] = `
<div>
  <EuiSearchBar
    box={
      Object {
        "incremental": true,
      }
    }
    defaultQuery="name:name1"
    filters={
      Array [
        Object {
          "field": "name",
          "name": "Name1",
          "negatedName": "Not Name1",
          "type": "field_value_toggle",
          "value": "name1",
        },
      ]
    }
    onChange={[Function]}
  />
  <EuiSpacer
    size="l"
  />
  <EuiBasicTable
    aria-label="aria-label"
    className="testClass1 testClass2"
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
          "sortable": true,
        },
        Object {
          "actions": Array [
            Object {
              "description": "edit",
              "name": "Edit",
              "onClick": [Function],
            },
          ],
          "name": "Actions",
        },
      ]
    }
    data-test-subj="test subject string"
    itemId="id"
    items={
      Array [
        Object {
          "id": "1",
          "name": "name1",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    pagination={
      Object {
        "hidePerPageOptions": undefined,
        "pageIndex": 0,
        "pageSize": 10,
        "pageSizeOptions": Array [
          10,
          25,
          50,
        ],
        "totalItemCount": 1,
      }
    }
    responsive={true}
    selection={
      Object {
        "onSelectionChange": [Function],
      }
    }
    sorting={
      Object {
        "allowNeutralSort": true,
        "sort": undefined,
      }
    }
    tableLayout="fixed"
  />
</div>
`;

exports[`EuiInMemoryTable with search and component between search and table 1`] = `
<div>
  <EuiSearchBar
    onChange={[Function]}
  />
  <EuiSpacer
    size="l"
  />
  <div>
    Children Between
  </div>
  <EuiBasicTable
    aria-label="aria-label"
    className="testClass1 testClass2"
    columns={
      Array [
        Object {
          "description": "description",
          "field": "name",
          "name": "Name",
          "sortable": true,
        },
        Object {
          "actions": Array [
            Object {
              "description": "edit",
              "name": "Edit",
              "onClick": [Function],
            },
          ],
          "name": "Actions",
        },
      ]
    }
    data-test-subj="test subject string"
    itemId="id"
    items={
      Array [
        Object {
          "id": "1",
          "name": "name1",
        },
        Object {
          "id": "2",
          "name": "name2",
        },
        Object {
          "id": "3",
          "name": "name3",
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    responsive={true}
    tableLayout="fixed"
  />
</div>
`;
